# libvda5050pp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  tests.md
cmake/: CPM.cmake  code-coverage.cmake  libvda5050++Config.cmake.in
docs/: CMakeLists.txt  build.md  extra.md  index.md  install.md  quickstart.md
docs/diagrams/: generate.sh  libvdma5050.dia  libvdma5050_linking.dia  libvdma5050_process_sequence.dia
docs/doxygen/html/: index.md
docs/pseudocode/: drive_subgraph_handle.pseudo  new_interface.pseudo
extra/: CMakeLists.txt
extra/json_model/: CMakeLists.txt  Config.cmake.in
extra/json_model/include/vda5050++/extra/: json_model.h
extra/json_model/src/: json_model.cpp
extra/logger_utils/: CMakeLists.txt
extra/logger_utils/include/vda5050++/extra/: console_logger.h  file_logger.h  multiplex_logger.h  pretty_logger.h  stream_logger.h
extra/logger_utils/src/: console_logger.cpp  file_logger.cpp  multiplex_logger.cpp  pretty_logger.cpp  stream_logger.cpp
extra/mqtt_connector/: CMakeLists.txt  Config.cmake.in
extra/mqtt_connector/include/vda5050++/extra/: mqtt_connector.h
extra/mqtt_connector/src/: mqtt_connector.cpp
include/vda5050++/core/: version.h
include/vda5050++/core/common/: blocking_queue.h  exception.h  formatting.h  interruptable_timer.h  semaphore.h
include/vda5050++/core/common/math/: geometry.h  linear_path_length_calculator.h
include/vda5050++/core/interface_agv/: const_handle_accessor.h  handle_accessor.h
include/vda5050++/core/logic/: action_manager.h  cancel_net.h  continuous_navigation_manager.h  continuous_navigation_single_step_task.h  dangling_net.h  drive_to_node_manager.h  id_not_found_error.h  instant_actions_manager.h  logic.h  net_manager.h  parallel_launch_net.h  partial_net.h  pause_resume_action_manager.h  sync_net.h  task_manager.h  types.h
include/vda5050++/core/messages/: message_processor.h  messages.h  state_update_timer.h  update_urgency.h
include/vda5050++/core/state/: state.h  state_manager.h
include/vda5050++/core/validation/: action_declared_validator.h  control_action_declarations.h  header_target_validator.h  header_version_validator.h  order_action_validator.h  order_append_validator.h  order_graph_consistency_validator.h  order_id_validator.h  order_reachable_validator.h  validation_provider.h  validator.h
include/vda5050++/interface_agv/: action_handler.h  continuous_navigation_handler.h  handle.h  logger.h  odometry_handler.h  pause_resume_handler.h  step_based_navigation_handler.h
include/vda5050++/interface_agv/agv_description/: acceleration.h  action_declaration.h  agv_description.h  battery.h  driving_mode.h  kinematic.h  navigation.h  parameter_range.h  serialized_value.h  velocity.h
include/vda5050++/interface_agv/status/: battery.h  loads.h  odometry.h  operating_mode.h  results.h  safety_state.h  visualization.h
include/vda5050++/interface_mc/: connector.h  connector_passive.h  message_consumer.h
include/vda5050++/model/: AGVPosition.h  Action.h  ActionParameter.h  ActionState.h  ActionStatus.h  BatteryState.h  BlockingType.h  BoundingBoxReference.h  Connection.h  ConnectionState.h  ControlPoint.h  EStop.h  Edge.h  EdgeState.h  Error.h  ErrorLevel.h  ErrorReference.h  Header.h  Info.h  InfoLevel.h  InfoReference.h  InstantActions.h  Load.h  LoadDimensions.h  Node.h  NodePosition.h  NodeState.h  OperatingMode.h  Order.h  OrientationType.h  SafetyState.h  State.h  Trajectory.h  Velocity.h  Visualization.h
src/: CMakeLists.txt
src/vda5050++/core/common/: exception.cpp
src/vda5050++/core/interface_agv/: const_handle_accessor.cpp  handle_accessor.cpp
src/vda5050++/core/logic/: action_manager.cpp  cancel_net.cpp  continuous_navigation_manager.cpp  continuous_navigation_single_step_task.cpp  dangling_net.cpp  drive_to_node_manager.cpp  instant_actions_manager.cpp  logic.cpp  net_manager.cpp  parallel_launch_net.cpp  pause_resume_action_manager.cpp  sync_net.cpp  task_manager.cpp
src/vda5050++/core/messages/: message_processor.cpp  messages.cpp  state_update_timer.cpp
src/vda5050++/core/state/: state_manager.cpp
src/vda5050++/core/validation/: action_declared_validator.cpp  header_target_validator.cpp  header_version_validator.cpp  order_action_validator.cpp  order_append_validator.cpp  order_graph_consistency_validator.cpp  order_id_validator.cpp  order_reachable_validator.cpp  validation_provider.cpp
src/vda5050++/interface_agv/: action_handler.cpp  continuous_navigation_handler.cpp  handle.cpp  logger.cpp  odometry_handler.cpp  pause_resume_handler.cpp  step_based_navigation_handler.cpp
src/vda5050++/interface_agv/status/: battery.cpp  loads.cpp  odometry.cpp  operating_mode.cpp  results.cpp  safety_state.cpp  visualization.cpp
test/: CMakeLists.txt  main.cpp
test/include/test/: console_logger.h  dump.hpp  order_factory.hpp  test_action_handler.h  test_connector.h  test_continuous_navigation_handler.h  test_odometry_handler.h  test_pause_resume_handler.h  test_step_based_navigation_handler.h
test/src/: console_logger.cpp  dump.cpp  order_factory.cpp  test_action_handler.cpp  test_connector.cpp  test_continuous_navigation_handler.cpp  test_odometry_handler.cpp  test_pause_resume_handler.cpp  test_step_based_navigation_handler.cpp
test/vda5050++/core/: action_declaration.cpp
test/vda5050++/core/common/: blocking_queue.cpp  interruptable_timer.cpp  semaphore.cpp
test/vda5050++/core/common/math/: geometry.cpp  linear_path_length_calculator.cpp
test/vda5050++/core/logic/: action_manager.cpp  combined_tests.cpp  continuous_navigation.cpp  init_position.cpp  net_manager.cpp  parallel_launch_net.cpp  sync_net.cpp
test/vda5050++/core/validation/: action_declared_validator.cpp  header_target_validator.cpp  header_version_validator.cpp  order_append_validator.cpp  order_graph_consistency_validator.cpp  order_id_validator.cpp  order_reachable_validator.cpp
test/vda5050++/model/: equality.cpp
